# 1000W_Electronic_Load

./: .gitignore  README.md
01_市场调研/: 1000W_DC电子负载_市场分析_中文版.pptx  1000W_Electronic_Load_Market_Analysis.pptx  README.md  ~$1000W_Electronic_Load_Market_Analysis.pptx
01_市场调研/用户研究/: W1_用户访谈大纲.docx
01_市场调研/竞品分析/: W1_竞品采购清单.docx
02_产品定义/: README.md  SRD_1200W_产品规格书_v1.0.docx  SRD_1200W_产品规格书_v1.1.docx  SRD_1200W_产品规格书_v1.2.docx  SRD_EL-1000_产品规格书_v1.3.docx
03_系统设计/: README.md  SYS-TECH-001_技术方案演讲PPT_v1.0.pptx  SYS-TECH-001_技术方案演讲_v1.0.pptx  SYS-TECH-001_详细技术方案_v1.0.docx  SYS-TECH-001_详细技术方案_v1.0.md
03_系统设计/功率拓扑/: SYS-ARCH-003_功率拓扑_v0.2_确认版.docx  SYS-ARCH-003_功率拓扑_全部完成_v1.0.docx  SYS-ARCH-003_功率拓扑_终版_v1.0.docx  (+1 more)
04_外观结构/: README.md
05_硬件研发/: README.md  SYS-BOM-001_整机BOM成本核算_v0.1.md  SYS-SCH-001_功率级原理图设计说明_v0.1.docx  SYS-SCH-001_功率级原理图设计说明_v0.2.docx  SYS-SCH-001_功率级原理图设计说明_v0.3.docx  SYS-SCH-001_功率级原理图设计说明_v0.4.docx  SYS-SCH-002_控制电路原理图设计说明_v0.1.docx  SYS-SCH-003_电源树原理图设计说明_v0.1.docx  功率级BOM价格表.docx
06_软件研发/: README.md
06_软件研发/firmware/c2000/: CMakeLists.txt  FreeRTOSConfig.h  main.c
06_软件研发/firmware/c2000/control/: current_loop.c  current_loop.h  modes.c  modes.h  pid.c  pid.h  voltage_loop.c  voltage_loop.h
06_软件研发/firmware/c2000/drivers/: adc.c  adc.h  cmpss.c  cmpss.h  gpio.c  gpio.h  hrpwm.c  hrpwm.h  timer.c  timer.h  uart.c  uart.h
06_软件研发/firmware/c2000/tasks/: comm_task.c  housekeeping_task.c  pid_task.c  protection_task.c
07_测试验证/: README.md  SYS-QA-001_安规认证策略_v0.1.md  SYS-TEST-001_快速原型验证策略_v0.1.md
08_供应链/: README.md  SYS-SUP-001_供应链摸底框架_v0.1.md
09_推广运营/: README.md
10_销售渠道/: README.md
11_客户成功/: README.md
12_项目管理/: 1000W电子负载_项目实施总计划.docx  1000W电子负载_项目开发规划与排期表.docx  ISSUES-001_项目问题跟踪清单_v0.1.md  README.md  产品开发闭环管理体系_v3_12维度.pptx
_meeting_notes/: MTG-000_管理框架与团队设计_20260526.docx  MTG-001_产品定义讨论纪要_20260526.docx  MTG-002_散热方案复核_20260526.docx  MTG-003_热优化与器件选型_20260526.docx  MTG-004_安全架构讨论_20260526.docx  MTG-005_电源树讨论_20260526.docx  MTG-006_功率拓扑讨论_20260526.docx  MTG-006_功率拓扑讨论_完整_20260526.docx  MTG-007_MOSFET选型_20260526.docx  MTG-008_功率拓扑T6T7_20260526.docx  MTG-009_控制架构C1_20260526.docx  MTG-010_通信协议_20260526.docx  MTG-011_PMBus-CAN_20260526.docx  MTG-012_外观结构竞品调研_20260527.docx  MTG-012_外观结构竞品调研_S1追加_20260527.docx  MTG-013.1_方案B-v3_定稿_20260528.md  MTG-013_外观结构方案B_ITECH风格_20260528.md  MTG-014_项目审查修复_20260529.md  MTG-015_KiCad原理图首版_20260530.md  MTG-016_明日审查指南.md  MTG-016_系统修复+原理图落地_20260531.md  项目全讨论记录_20260526.docx
(+53 files in other folders)
